--- a/sec.html
+++ b/sec.html
@@ -32,6 +32,8 @@
     <div class="memoryimage">
         <img src="anı1.jpg" alt="anı1">
         <p class="anı1p">ilk sinsi düşmanımızla tanışmıştık hem de sevgililer gününde!</p>
+        <img src="anı1.jpg" alt="anı1">
+        <p class="anı1p">ilk sinsi düşmanımızla tanışmıştık hem de sevgililer gününde!</p>
         
     </div>
 </body>
