--- a/sec.html
+++ b/sec.html
@@ -32,8 +32,8 @@
     <div class="memoryimage">
         <img src="anı1.jpg" alt="anı1">
         <p class="anı1p">ilk sinsi düşmanımızla tanışmıştık hem de sevgililer gününde!</p>
-        <img src="anı1.jpg" alt="anı2">
-        <p class="anı1p">ilk sinsi düşmanımızla tanışmıştık hem de sevgililer gününde!</p>
+        <img src="WhatsApp Görsel 2024-09-15 saat 14.14.16_0ad9f73e.jpg" alt="anı2">
+        <p class="anı1p">Mükemmeeel bir akşam olmuştu sanki yeni sevgili olmuşuz gibi heyecanlı ve mutlu bir yemek yemiştik</p>
         
     </div>
 </body>
