--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
     </div>
     <div class="write">
         <p> Sevgilim bana kattıkların ve seninle geçirdiğim her an benim için çok değerli.
-        İlişkimiz benim için çok kıymetli bu sıra zor ve kötü bir zaman yaşıyoruz ama 
-        bunun üstesinden geleceğimizi biliyorum seninle her şeyin yoluna gireceğine eminim
-        yaptığım hata için çok pişmanım özür dilerim </p>
+        İlişkimiz benim için çok kıymetli seninle çok çok çoooook mutluyum iyi ki varsın canıım sevgilim </p>
 </div>
     <script src="script.js"></script>
     <div class="bar-part">
